@@ -21,6 +21,7 @@
 - Make audisp-remote robust
 - Add 2 error returns to python bindings
 - Update the man pages a little
+- Add some debug info to audidp-remote startup and shutdown
 
 1.7.18
 - Update time examples in ausearch/report man pages
